--- a/PRJ_CRUD_SPRING_BOOT_MONGODB/src/main/resources/application.properties
+++ b/PRJ_CRUD_SPRING_BOOT_MONGODB/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/Escuela
-
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 server.port=8087
 
 
