--- a/PRJ_CRUD_SPRING_BOOT_MONGODB/src/main/resources/application.properties
+++ b/PRJ_CRUD_SPRING_BOOT_MONGODB/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://ItzDaniel:ItzDaniel8048@desarrolloaplicacionesw.lvmzepb.mongodb.net/Escuela?retryWrites=true&w=majority&tls=true&ssl=true&appName=DesarrolloAplicacionesWeb
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 server.port=8087
 
 
