--- a/PRJ_CRUD_SPRING_BOOT/src/main/resources/application.properties
+++ b/PRJ_CRUD_SPRING_BOOT/src/main/resources/application.properties
@@ -1,13 +1,22 @@
 spring.application.name=PRJ_CRUD_SPRING_BOOT
-application.title = Demo MVC con SpringBoot
-application.version = 1.0.0
+application.title=Demo MVC con SpringBoot
+application.version=1.0.0
+
 spring.datasource.url=jdbc:h2:file:/data/escuela;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=tecsup
 spring.datasource.password=tecsup
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+
 spring.mvc.contentnegotiation.favor-parameter=true
-spring.mvc.contentnegotiation.media-types.pdf = application/pdf
-spring.mvc.contentnegotiation.media-types.xlsx = application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
-server.port = 8086
+spring.mvc.contentnegotiation.media-types.pdf=application/pdf
+spring.mvc.contentnegotiation.media-types.xlsx=application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+
+server.port=8086
